--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Salad</title>
     <script defer src="./js/script.js"></script>
+    <script src="./css/styles.css"></script>
 </head>
 <body>
     <section id="inputSection">
         <form>
             <label for="fruitInput">Enter a fruit</label>
-            <input name="Fruit" type="text" id="fruitInput" placeholder="e.g. banana">
+            <input name="Fruit" type="text" id="fruitInput" placeholder="e.g. banana" required>
             <input type="submit" value="submit">
         </form>
     </section>
     <section id="fruitSection">
-
+        <ul></ul>
     </section>
     <section id="nutritionSection">
 
