--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Salad</title>
     <script defer src="./js/script.js"></script>
-    <script src="./css/styles.css"></script>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <section id="inputSection">
@@ -19,7 +19,7 @@
         <ul></ul>
     </section>
     <section id="nutritionSection">
-
+        <p></p>
     </section>
 </body>
 </html>
